@@ -18,7 +18,6 @@
 
 package org.wso2.carbon.identity.oidc.session.util;
 
-import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.lang.StringUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -26,33 +25,32 @@ import org.wso2.carbon.identity.core.util.IdentityUtil;
 import org.wso2.carbon.identity.oauth.common.OAuthConstants;
 import org.wso2.carbon.identity.oauth.config.OAuthServerConfiguration;
 import org.wso2.carbon.identity.oauth2.util.OAuth2Util;
+import org.wso2.carbon.identity.oidc.session.DefaultOIDCSessionStateManager;
 import org.wso2.carbon.identity.oidc.session.OIDCSessionConstants;
 import org.wso2.carbon.identity.oidc.session.OIDCSessionManager;
+import org.wso2.carbon.identity.oidc.session.OIDCSessionStateManager;
 import org.wso2.carbon.identity.oidc.session.config.OIDCSessionManagementConfiguration;
+
+import java.io.UnsupportedEncodingException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URLEncoder;
 
 import javax.servlet.http.Cookie;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import java.io.UnsupportedEncodingException;
-import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.net.URLEncoder;
-import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
-import java.security.SecureRandom;
-import java.util.UUID;
 
 /**
- * This class includes all the utility methods with regard to OIDC session management
+ * This class includes all the utility methods with regard to OIDC session management.
  */
 public class OIDCSessionManagementUtil {
 
     private static final String RANDOM_ALG_SHA1 = "SHA1PRNG";
     private static final String DIGEST_ALG_SHA256 = "SHA-256";
+    private static final String OIDC_SESSION_STATE_MANAGER_CONFIG = "OAuth.OIDCSessionStateManager";
 
     private static final OIDCSessionManager sessionManager = new OIDCSessionManager();
+    private static OIDCSessionStateManager oidcSessionStateManager;
 
     private static final Log log = LogFactory.getLog(OIDCSessionManagementUtil.class);
 
@@ -61,16 +59,17 @@ public class OIDCSessionManagementUtil {
     }
 
     /**
-     * Returns an instance of SessionManager which manages session persistence
+     * Returns an instance of SessionManager which manages session persistence.
      *
      * @return
      */
     public static OIDCSessionManager getSessionManager() {
+
         return sessionManager;
     }
 
     /**
-     * Generates a session state using the provided client id, client callback url and browser state cookie id
+     * Generates a session state using the provided client id, client callback url and browser state cookie id.
      *
      * @param clientId
      * @param rpCallBackUrl
@@ -79,18 +78,7 @@ public class OIDCSessionManagementUtil {
      */
     public static String getSessionStateParam(String clientId, String rpCallBackUrl, String opBrowserState) {
 
-        try {
-            String salt = generateSaltValue();
-
-            String sessionStateDataString =
-                    clientId + " " + getOrigin(rpCallBackUrl) + " " + opBrowserState + " " + salt;
-
-            MessageDigest digest = MessageDigest.getInstance(DIGEST_ALG_SHA256);
-            digest.update(sessionStateDataString.getBytes());
-            return bytesToHex(digest.digest()) + "." + salt;
-        } catch (NoSuchAlgorithmException e) {
-            throw new RuntimeException("Error while calculating session state.", e);
-        }
+        return getOIDCessionStateManager().getSessionStateParam(clientId, rpCallBackUrl, opBrowserState);
     }
 
     /**
@@ -106,7 +94,7 @@ public class OIDCSessionManagementUtil {
     public static String addSessionStateToURL(String url, String sessionState, String responseType) {
 
         if (StringUtils.isNotBlank(url) && StringUtils.isNotBlank(sessionState)) {
-            if(OAuth2Util.isImplicitResponseType(responseType)) {
+            if (OAuth2Util.isImplicitResponseType(responseType) || OAuth2Util.isHybridResponseType(responseType)) {
                 if (url.indexOf('#') > 0) {
                     return url + "&" + OIDCSessionConstants.OIDC_SESSION_STATE_PARAM + "=" + sessionState;
                 } else {
@@ -126,7 +114,7 @@ public class OIDCSessionManagementUtil {
 
     /**
      * Generates a session state using the provided client id, client callback url and browser state cookie id and
-     * adds the generated value to the url as a query parameter
+     * adds the generated value to the url as a query parameter.
      *
      * @param url
      * @param clientId
@@ -139,22 +127,23 @@ public class OIDCSessionManagementUtil {
                                               Cookie opBrowserStateCookie, String responseType) {
 
         String sessionStateParam = getSessionStateParam(clientId, rpCallBackUrl, opBrowserStateCookie == null ? null :
-                                                                                 opBrowserStateCookie.getValue());
+                opBrowserStateCookie.getValue());
         return addSessionStateToURL(url, sessionStateParam, responseType);
     }
 
     /**
-     * Returns the browser state cookie
+     * Returns the browser state cookie.
      *
      * @param request
-     * @return Cookie
+     * @return CookieString url, String clientId, String rpCallBackUrl,
+     * Cookie opBrowserStateCookie, String responseType
      */
     public static Cookie getOPBrowserStateCookie(HttpServletRequest request) {
 
         Cookie[] cookies = request.getCookies();
         if (cookies != null) {
             for (Cookie cookie : cookies) {
-                if (cookie.getName().equals(OIDCSessionConstants.OPBS_COOKIE_ID)) {
+                if (cookie != null && cookie.getName().equals(OIDCSessionConstants.OPBS_COOKIE_ID)) {
                     return cookie;
                 }
             }
@@ -164,24 +153,18 @@ public class OIDCSessionManagementUtil {
     }
 
     /**
-     * Adds the browser state cookie to the response
+     * Adds the browser state cookie to the response.
      *
      * @param response
      * @return Cookie
      */
     public static Cookie addOPBrowserStateCookie(HttpServletResponse response) {
 
-        Cookie cookie =
-                new Cookie(OIDCSessionConstants.OPBS_COOKIE_ID, UUID.randomUUID().toString());
-        cookie.setSecure(true);
-        cookie.setPath("/");
-
-        response.addCookie(cookie);
-        return cookie;
+        return getOIDCessionStateManager().addOPBrowserStateCookie(response);
     }
 
     /**
-     * Invalidate the browser state cookie
+     * Invalidate the browser state cookie.
      *
      * @param request
      * @param response
@@ -206,7 +189,7 @@ public class OIDCSessionManagementUtil {
     }
 
     /**
-     * Returns the origin of the provided url
+     * Returns the origin of the provided url.
      * <scheme>://<host>:<port>
      *
      * @param url
@@ -215,9 +198,9 @@ public class OIDCSessionManagementUtil {
     public static String getOrigin(String url) {
 
         try {
-            URI uri = new URL(url).toURI();
+            URI uri = new URI(url);
             return uri.getScheme() + "://" + uri.getAuthority();
-        } catch (MalformedURLException | URISyntaxException e) {
+        } catch (URISyntaxException e) {
             log.error("Error while parsing URL origin of " + url + ". URL seems to be malformed.");
         }
 
@@ -225,37 +208,38 @@ public class OIDCSessionManagementUtil {
     }
 
     /**
-     * Returns OIDC logout consent page URL
+     * Returns OIDC logout consent page URL.
      *
      * @return OIDC logout consent page URL
      */
     public static String getOIDCLogoutConsentURL() {
 
-        String OIDCLogutConsentPageUrl = OIDCSessionManagementConfiguration.getInstance().getOIDCLogoutConsentPageUrl();
-        if (StringUtils.isBlank(OIDCLogutConsentPageUrl)) {
-            OIDCLogutConsentPageUrl =
+        String oidcLogoutConsentPageUrl = OIDCSessionManagementConfiguration.getInstance()
+                .getOIDCLogoutConsentPageUrl();
+        if (StringUtils.isBlank(oidcLogoutConsentPageUrl)) {
+            oidcLogoutConsentPageUrl =
                     IdentityUtil.getServerURL("/authenticationendpoint/oauth2_logout_consent.do", false, false);
         }
-        return OIDCLogutConsentPageUrl;
+        return oidcLogoutConsentPageUrl;
     }
 
     /**
-     * Returns OIDC logout URL
+     * Returns OIDC logout URL.
      *
      * @return OIDC logout URL
      */
     public static String getOIDCLogoutURL() {
 
-        String OIDCLogutPageUrl = OIDCSessionManagementConfiguration.getInstance().getOIDCLogoutPageUrl();
-        if (StringUtils.isBlank(OIDCLogutPageUrl)) {
-            OIDCLogutPageUrl =
+        String oidcLogoutPageUrl = OIDCSessionManagementConfiguration.getInstance().getOIDCLogoutPageUrl();
+        if (StringUtils.isBlank(oidcLogoutPageUrl)) {
+            oidcLogoutPageUrl =
                     IdentityUtil.getServerURL("/authenticationendpoint/oauth2_logout.do", false, false);
         }
-        return OIDCLogutPageUrl;
+        return oidcLogoutPageUrl;
     }
 
     /**
-     * Returns the error page URL with given error code and error message as query parameters
+     * Returns the error page URL with given error code and error message as query parameters.
      *
      * @param errorCode
      * @param errorMessage
@@ -270,7 +254,7 @@ public class OIDCSessionManagementUtil {
 
         try {
             errorPageUrl += "?" + OAuthConstants.OAUTH_ERROR_CODE + "=" + URLEncoder.encode(errorCode, "UTF-8") + "&"
-                            + OAuthConstants.OAUTH_ERROR_MESSAGE + "=" + URLEncoder.encode(errorMessage, "UTF-8");
+                    + OAuthConstants.OAUTH_ERROR_MESSAGE + "=" + URLEncoder.encode(errorMessage, "UTF-8");
         } catch (UnsupportedEncodingException e) {
             //ignore
             if (log.isDebugEnabled()) {
@@ -280,7 +264,6 @@ public class OIDCSessionManagementUtil {
 
         return errorPageUrl;
     }
-
 
     /**
      * Returns the OpenIDConnect User Consent.
@@ -292,20 +275,51 @@ public class OIDCSessionManagementUtil {
         return OAuthServerConfiguration.getInstance().getOpenIDConnectSkipeUserConsentConfig();
     }
 
-    private static String generateSaltValue() throws NoSuchAlgorithmException {
+    public static OIDCSessionStateManager getOIDCessionStateManager() {
 
-        byte[] bytes = new byte[16];
-        SecureRandom secureRandom = SecureRandom.getInstance(RANDOM_ALG_SHA1);
-        secureRandom.nextBytes(bytes);
-        return Base64.encodeBase64URLSafeString(bytes);
+        if (oidcSessionStateManager == null) {
+            synchronized (OIDCSessionManagementUtil.class) {
+                if (oidcSessionStateManager == null) {
+                    initOIDCSessionStateManager();
+                }
+            }
+        }
+        return oidcSessionStateManager;
     }
 
-    private static String bytesToHex(byte[] bytes) {
+    private static void initOIDCSessionStateManager() {
 
-        StringBuilder result = new StringBuilder();
-        for (byte byt : bytes) {
-            result.append(Integer.toString((byt & 0xff) + 0x100, 16).substring(1));
+        String oidcSessionStateManagerClassName = IdentityUtil.getProperty(OIDC_SESSION_STATE_MANAGER_CONFIG);
+        if (StringUtils.isNotBlank(oidcSessionStateManagerClassName)) {
+            try {
+                Class clazz = Thread.currentThread().getContextClassLoader()
+                        .loadClass(oidcSessionStateManagerClassName);
+                oidcSessionStateManager = (OIDCSessionStateManager) clazz.newInstance();
+
+                if (log.isDebugEnabled()) {
+                    log.debug("An instance of " + oidcSessionStateManagerClassName
+                            + " is created for OIDCSessionManagementUtil.");
+                }
+
+            } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+                String errorMsg =
+                        "Error when instantiating the OIDCSessionStateManager : " + oidcSessionStateManagerClassName
+                                + ". Defaulting to DefaultOIDCSessionStateManager";
+                log.error(errorMsg, e);
+                oidcSessionStateManager = new DefaultOIDCSessionStateManager();
+            }
+        } else {
+            oidcSessionStateManager = new DefaultOIDCSessionStateManager();
         }
-        return result.toString();
+    }
+
+    /**
+     * Returns config for handling already logged out sessions gracefully.
+     *
+     * @return Return true if config is enabled.
+     */
+    public static boolean handleAlreadyLoggedOutSessionsGracefully() {
+
+        return OIDCSessionManagementConfiguration.getInstance().handleAlreadyLoggedOutSessionsGracefully();
     }
 }
